--- a/EzOrder(Cus)/View/AD/AD.storyboard
+++ b/EzOrder(Cus)/View/AD/AD.storyboard
@@ -181,7 +181,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navImg" translatesAutoresizingMaskIntoConstraints="NO" id="tJj-Qy-IRk">
-                                    <rect key="frame" x="0.0" y="0.0" width="200.00000000000006" height="30"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
