--- a/EzOrder(Cus)/View/Personal/Personal.storyboard
+++ b/EzOrder(Cus)/View/Personal/Personal.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="真輪盤" translatesAutoresizingMaskIntoConstraints="NO" id="J2X-4B-24b" customClass="RotateImageView" customModule="EzOrder_Cus_" customModuleProvider="target">
-                                <rect key="frame" x="37.5" y="183.5" width="300" height="300"/>
+                                <rect key="frame" x="37.5" y="183.49999999999997" width="300" height="300.00000000000006"/>
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="J2X-4B-24b" secondAttribute="height" multiplier="1:1" id="RYG-nw-5Jn"/>
@@ -940,7 +940,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bLp-CQ-qp4"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="個人" image="客戶端個人" id="5lU-16-r1W"/>
+                    <tabBarItem key="tabBarItem" title="個人" image="個人粗體" id="5lU-16-r1W"/>
                     <navigationItem key="navigationItem" title="個人" id="GOE-F4-KU7"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -1241,8 +1241,8 @@
     <resources>
         <image name="personal" width="128" height="128"/>
         <image name="rate0" width="415" height="85.666664123535156"/>
+        <image name="個人粗體" width="27" height="26"/>
         <image name="圓" width="688" height="688"/>
-        <image name="客戶端個人" width="27.666666030883789" height="26.333333969116211"/>
         <image name="指針" width="109.66666412353516" height="142.66667175292969"/>
         <image name="登出" width="285" height="326"/>
         <image name="真輪盤" width="319.66665649414062" height="320.66665649414062"/>
