--- a/EzOrder(Cus)/View/Search/Search.storyboard
+++ b/EzOrder(Cus)/View/Search/Search.storyboard
@@ -116,7 +116,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kmv-nx-Dps"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="搜尋" image="收尋" id="xbc-jB-w9c"/>
+                    <tabBarItem key="tabBarItem" title="搜尋" image="收尋粗體" id="xbc-jB-w9c"/>
                     <navigationItem key="navigationItem" title="搜尋餐廳" id="feQ-KT-xlh"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -1103,7 +1103,7 @@
         <image name="rate4" width="415" height="85.666664123535156"/>
         <image name="商家" width="36" height="36"/>
         <image name="地址" width="83" height="83"/>
-        <image name="收尋" width="27.666666030883789" height="27.666666030883789"/>
+        <image name="收尋粗體" width="27" height="27"/>
         <image name="編輯菜單營業時間" width="69" height="69"/>
         <image name="電話" width="69" height="69"/>
     </resources>
