--- a/EzOrder(Cus)/View/Search/Search.storyboard
+++ b/EzOrder(Cus)/View/Search/Search.storyboard
@@ -417,8 +417,8 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N0V-07-Qgc">
-                                                        <rect key="frame" x="98" y="120" width="62" height="30"/>
-                                                        <state key="normal" title="測試測試">
+                                                        <rect key="frame" x="98" y="120" width="30" height="30"/>
+                                                        <state key="normal">
                                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </state>
                                                         <connections>
